# 6.826-2017-labs

./: .gitignore  Makefile  README.md
remap-nbd/: hs.cabal
remap-nbd/lib/Network/: NBD.hs
replicate-nbd/: hs.cabal  stack.yaml
replicate-nbd/lib/Network/: NBD.hs
replicate-nbd/lib/Network/NBD/: Data.hs
src/: POCS.v
src/Common/: NbdAPI.v  NbdImpl.v  NbdServer.v  OneDiskAPI.v
src/Helpers/: Disk.v
src/Lab1/: StatDbAPI.v  StatDbImpl.v  VariablesAPI.v  VariablesImpl.v
src/Lab2/: BadBlockAPI.v  BadBlockImpl.v  RemappedDiskImpl.v
src/Lab3/: AtomicPairAPI.v  AtomicPairImpl.v
src/Lab4/: ReplicatedDiskImpl.v  TwoDiskAPI.v  TwoDiskBaseAPI.v  TwoDiskBaseImpl.v  TwoDiskImpl.v
src/Spec/: Abstraction.v  Proc.v  ProcTheorems.v  Recovery.v
statdb-cli/: stack.yaml  statdb-cli.cabal
statdb-cli/lib/Variables/: Ops.hs  State.hs
