name:                hs
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable remap-nbd
  hs-source-dirs:      extract, lib
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5, ghc-prim, mtl, bytestring,
                       directory, unix, unix-bytestring, cereal,
                       cereal-conduit, conduit-extra, conduit-combinators,
                       optparse-applicative
  other-modules:       Abstraction
                     , BadBlockAPI
                     , BadBlockDisk.Env
                     , BadBlockDisk.Ops
                     , BadBlockImpl
                     , Disk
                     , Helpers
                     , Nat
                     , NbdAPI
                     , NbdImpl
                     , NbdServer
                     , Network.NBD
                     , Network.NBD.Data
                     , Network.ServerOps
                     , OneDiskAPI
                     , Proc
                     , RemappedServer
                     , Utils.Conversion
  default-language:    Haskell2010
