name:                hs
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable replicate-nbd
  hs-source-dirs:      extract, lib
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5, ghc-prim, mtl, bytestring,
                       directory, unix, unix-bytestring, cereal,
                       cereal-conduit, conduit-extra, conduit-combinators,
                       optparse-applicative
  default-language:    Haskell2010
