name:                statdb-cli
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable statdb-cli
  hs-source-dirs:      extract, lib
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , ghc-prim
                     , mtl
                     , bytestring
  other-modules:       Abstraction
                     , Bool
                     , CLI.Stubs
                     , Datatypes
                     , Helpers
                     , Logic
                     , Proc
                     , StatDbAPI
                     , StatDbCli
                     , Variables.State
                     , Variables.Ops
                     , VariablesAPI
                     , VariablesImpl
  default-language:    Haskell2010
